--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,14 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake Game</title>
-
+    <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
     <h1>Snake Game</h1>
-
+    <canvas id="gameCanvas"></canvas>
+    <script src="/static/js/snake.js"></script>
 </body>
 </html>
